--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "style-loader": "^0.8.3",
     "webpack": "^1.8.11",
     "webpack-dev-server": "^1.8.2"
+  },
+  "dependencies": {
+    "react-onclickoutside": "^0.2.4"
   }
 }
