--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "devDependencies": {
     "webpack-dev-server": "^1.9.0"
   },
+  "keywords": [
+    "react", "reactjs", "popup", "popups", "spawn", "mouse"
+  ],
   "dependencies": {
     "jsx-loader": "^0.13.2",
     "react": "^0.13.3",
