--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react", "reactjs", "popup", "popups", "spawn", "mouse"
   ],
   "dependencies": {
-    "jsx-loader": "^0.13.2",
-    "react": "^0.13.3",
-    "react-onclickoutside": "^0.2.4"
+    "jsx-loader": "^0.13.x",
+    "react": "^0.13.x",
+    "react-onclickoutside": "^0.3.1"
   }
 }
