--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "url": "git@github.com:Radivarig/react-popups.git"
   },
   "devDependencies": {
-    "react-dom": "^0.14.1",
     "webpack-dev-server": "^1.9.0"
   },
   "keywords": [
@@ -25,9 +24,12 @@
     "spawn",
     "mouse"
   ],
+  "peerDependencies": {
+    "react": "^0.14.1",
+    "react-dom": "^0.14.1"
+  },
   "dependencies": {
     "jsx-loader": "^0.13.x",
-    "react": "^0.14.1",
     "react-onclickoutside": "^4.0.1"
   }
 }
