--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "mouse"
   ],
   "peerDependencies": {
-    "react": "^0.14.1",
-    "react-dom": "^0.14.1"
+    "react": ">=0.14.1",
+    "react-dom": ">=0.14.1"
   },
   "dependencies": {
     "jsx-loader": "^0.13.x",
