--- a/package.json
+++ b/package.json
@@ -2,18 +2,16 @@
   "name": "react-popups",
   "version": "1.2.2",
   "description": "Reactjs component for spawning custom popups at mouse position.",
-  "author": "Reslav Hollos",
+  "author": "Reslav Hollos <reslav.hollos@gmail.com> (http://radivarig.github.io)",
   "license": "MIT",
-  "main": "./exports.js",
+  "main": "./dist/main.js",
   "scripts": {
-    "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config webpack.config.js --progress --colors"
+    "start": "webpack-dev-server --mode development --open",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:Radivarig/react-popups.git"
-  },
-  "devDependencies": {
-    "webpack-dev-server": "^1.9.0"
   },
   "keywords": [
     "react",
@@ -24,12 +22,25 @@
     "spawn",
     "mouse"
   ],
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.10",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "react-dom": "^16.2.0",
+    "style-loader": "^0.20.2",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
+  },
   "peerDependencies": {
-    "react": ">=0.14.1",
-    "react-dom": ">=0.14.1"
+    "react": "^16.2.0"
   },
   "dependencies": {
-    "jsx-loader": "^0.13.x",
-    "react-onclickoutside": "^4.0.1"
+    "react-onclickoutside": "^6.7.1"
   }
 }
